<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="aAndB">A ^ B</string>
    <string name="true_">T</string>
    <string name="false_">F</string>
    <string name="header">Conjunction (AND)</string>
    <string name="submitBtn">Submit</string>
    <string name="trueAnswer">t</string>
    <string name="falseAnswer">f</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect</string>
</resources>